--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             margin-top: 20px;
             width: 90%;
             max-width: 600px;
+            opacity: 0; /* Caché par défaut */
+            transition: opacity 1s ease; /* Transition pour un effet de fondu */
         }
         .item {
             display: grid;
@@ -144,9 +146,63 @@
         .modal button:hover {
             background-color: #e0558b;
         }
+
+        /* Fenêtre modale de bienvenue */
+        #welcomeModal {
+            display: flex; /* Affiché par défaut */
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8); /* Fond sombre */
+            justify-content: center;
+            align-items: center;
+            z-index: 9999; /* Devant tout */
+        }
+
+        #welcomeModal .modal-content {
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            text-align: center;
+            width: 300px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        #welcomeModal .modal-content h2 {
+            font-size: 1.5em;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        #welcomeModal .modal-content button {
+            background: linear-gradient(135deg, #00b3a3, #00d084); /* Dégradé assorti au site */
+            color: white;
+            font-size: 1em;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        #welcomeModal .modal-content button:hover {
+            background: linear-gradient(135deg, #00a76d, #00b3a3); /* Gradient plus foncé */
+            transform: scale(1.05);
+        }
     </style>
 </head>
 <body>
+    <div id="welcomeModal">
+        <div class="modal-content">
+            <h2>Bienvenue dans l'inventaire Poplab</h2>
+            <button id="enterButton">Entrer dans l'inventaire</button>
+        </div>
+    </div>
+
     <img src="Images/logo.png" alt="Logo" class="logo">
     <h1>Inventaire Poplab</h1>
     
@@ -171,8 +227,10 @@
     </div>
 
     <script>
+        let itemToDelete = null;
+
         document.addEventListener("DOMContentLoaded", function () {
-            const API_URL = "https://api.jsonbin.io/v3/b/673c9a24e41b4d34e456eab6/latest";
+            const API_URL = "https://api.jsonbin.io/v3/b/673c9a24e41b4d34e456eab6";
             const MASTER_KEY = "$2a$10$C2IpRYDMnBVS09UziRhWsuPTWBDUAY3bghoT9Fz9cORd/9QFWGhiW";
             const ACCESS_KEY = "$2a$10$CK7kuKd1eFHbsVtOb88Jbu4vIKYO5oTKnHfu2t0L.vVU2DP/wHcmW";
             let inventoryItems = [];
@@ -185,7 +243,6 @@
                             "X-Access-Key": ACCESS_KEY,
                         },
                     });
-                    if (!response.ok) throw new Error("Erreur de chargement : " + response.status);
                     const data = await response.json();
                     inventoryItems = data.record || [];
                     loadInventory();
@@ -196,7 +253,7 @@
 
             async function saveToJsonBin() {
                 try {
-                    const response = await fetch(API_URL, {
+                    await fetch(API_URL, {
                         method: "PUT",
                         headers: {
                             "Content-Type": "application/json",
@@ -204,7 +261,6 @@
                         },
                         body: JSON.stringify({ record: inventoryItems }),
                     });
-                    if (!response.ok) throw new Error("Erreur de sauvegarde : " + response.status);
                 } catch (error) {
                     console.error("Erreur lors de la sauvegarde des données :", error);
                 }
@@ -278,6 +334,21 @@
             document.getElementById("confirmDelete").addEventListener("click", deleteItem);
             document.getElementById("cancelDelete").addEventListener("click", () => {
                 document.getElementById("myModal").style.display = "none";
+            });
+
+            // Gestion de la fenêtre de bienvenue
+            const welcomeModal = document.getElementById("welcomeModal");
+            const enterButton = document.getElementById("enterButton");
+            const inventorySection = document.getElementById("inventorySection");
+            const addSection = document.getElementById("addSection");
+
+            enterButton.addEventListener("click", () => {
+                welcomeModal.style.opacity = 0; // Transition pour masquer
+                setTimeout(() => {
+                    welcomeModal.style.display = "none"; // Retire complètement la modale
+                    inventorySection.style.opacity = 1; // Affiche l'inventaire avec un effet de fondu
+                    addSection.style.opacity = 1; // Affiche la section "Ajouter un article" avec le même fondu
+                }, 1000); // Correspond à la durée de l'opacité
             });
 
             loadFromJsonBin();
