--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
             margin-top: 20px;
             width: 90%;
             max-width: 600px;
-            opacity: 0; /* Caché par défaut */
-            transition: opacity 1s ease; /* Transition pour un effet de fondu */
         }
         .item {
             display: grid;
@@ -159,6 +157,13 @@
             justify-content: center;
             align-items: center;
             z-index: 9999; /* Devant tout */
+            opacity: 1; /* Initialement visible */
+            transition: opacity 1s ease;
+        }
+
+        #welcomeModal.hidden {
+            opacity: 0; /* Transition vers invisible */
+            pointer-events: none; /* Désactive les clics */
         }
 
         #welcomeModal .modal-content {
@@ -340,14 +345,14 @@
             const welcomeModal = document.getElementById("welcomeModal");
             const enterButton = document.getElementById("enterButton");
             const inventorySection = document.getElementById("inventorySection");
-            const addSection = document.getElementById("addSection");
 
             enterButton.addEventListener("click", () => {
-                welcomeModal.style.opacity = 0; // Transition pour masquer
+                welcomeModal.classList.add("hidden"); // Transition pour masquer
                 setTimeout(() => {
                     welcomeModal.style.display = "none"; // Retire complètement la modale
-                    inventorySection.style.opacity = 1; // Affiche l'inventaire avec un effet de fondu
-                    addSection.style.opacity = 1; // Affiche la section "Ajouter un article" avec le même fondu
+                    inventorySection.style.opacity = 0; // Début du fondu
+                    inventorySection.style.transition = "opacity 1s ease"; // Transition du fondu
+                    inventorySection.style.opacity = 1; // Fin du fondu
                 }, 1000); // Correspond à la durée de l'opacité
             });
 
